# rust-mcp

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README-prompts.md  README.md  SUMMARY.md  run-prompt-example.sh
examples/completion-client/: Cargo.toml
examples/completion-client/src/: main.rs
examples/completion-server/: Cargo.toml
examples/completion-server/src/: main.rs
examples/hello-world/: Cargo.toml
examples/hello-world/src/: main.rs
examples/prompt-client/: Cargo.toml
examples/prompt-client/src/: main.rs
examples/prompt-server/: Cargo.toml
examples/prompt-server/src/: main.rs
examples/resource-server/: Cargo.toml
examples/resource-server/src/: main.rs
examples/sampling-client/: Cargo.toml
examples/sampling-client/src/: main.rs
examples/sampling-server/: Cargo.toml
examples/sampling-server/src/: main.rs
examples/simple-client/: Cargo.toml
examples/simple-client/src/: main.rs
examples/template-client/: Cargo.toml
examples/template-client/src/: main.rs
examples/template-server/: Cargo.toml
examples/template-server/src/: main.rs
mcp-client/: Cargo.toml
mcp-client/src/: client.rs  lib.rs
mcp-client/src/transport/: mod.rs  stdio.rs
mcp-protocol/: Cargo.toml
mcp-protocol/src/: constants.rs  version.rs
mcp-protocol/src/messages/: mod.rs
mcp-protocol/src/types/: mod.rs  tool.rs
mcp-protocol/src/types/completion/: mod.rs
mcp-protocol/src/types/resource/: mod.rs
mcp-server/: Cargo.toml
mcp-server/src/: completion.rs  completion_handler.rs  lib.rs  prompts.rs  resource_extensions.rs  sampling.rs  server.rs  server_prompts.rs
mcp-server/src/resources/: mod.rs
mcp-server/src/tools/: mod.rs
mcp-server/src/transport/: mod.rs  stdio.rs
