[workspace]
members = [
    "mcp-protocol",
    "mcp-client",
    "mcp-server",
    "examples/hello-world",
    "examples/simple-client",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
