[workspace]
members = [
    "mcp-protocol",
    "mcp-client",
    "mcp-server",
    "examples/hello-world",
    "examples/simple-client",
    "examples/resource-server",
    "examples/template-server",
    "examples/template-client",
    "examples/prompt-server",
    "examples/prompt-client",
    "examples/sampling-server",
    "examples/sampling-client",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
