[package]
name = "modelcontextprotocol-client"
version = "0.1.0"
edition = "2021"
description = "Client implementation for the Model Context Protocol (MCP)"
license = "MIT"

[dependencies]
mcp-protocol = "0.2.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
