[package]
name = "modelcontextprotocol-client"
version = "0.1.1"
edition = "2021"
description = "Client implementation for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/colinrozzi/rust-mcp"

[dependencies]
mcp-protocol = "0.2.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[features]
default = ["snake_case"]
camel_case = ["mcp-protocol/camel_case"]
snake_case = ["mcp-protocol/snake_case"]
