[package]
name = "modelcontextprotocol-server"
version = "0.1.3"
edition = "2021"
description = "Server implementation for the Model Context Protocol (MCP)"
license = "MIT"
repository = "https://github.com/colinrozzi/rust-mcp"

[dependencies]
mcp-protocol = "0.2.5"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[features]
camel_case = ["mcp-protocol/camel_case"]
