[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-protocol = { path = "../../mcp-protocol" }
mcp-server = { path = "../../mcp-server" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
