[package]
name = "sampling-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-client = { path = "../../mcp-client" }
mcp-protocol = { path = "../../mcp-protocol" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
