[package]
name = "sampling-client"
version = "0.1.0"
edition = "2021"

[dependencies]
modelcontextprotocol-client = { path = "../../mcp-client" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
