[package]
name = "sampling-server"
version = "0.1.0"
edition = "2021"

[dependencies]
modelcontextprotocol-server = { path = "../../mcp-server" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
