[package]
name = "template-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mcp-protocol = { path = "../../mcp-protocol" }
mcp-client = { path = "../../mcp-client" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
